--- a/index.html
+++ b/index.html
@@ -478,21 +478,21 @@
                         <div class="title">Make Agent Defeat Agent: Automatic Detection of Taint-Style Vulnerabilities in LLM-based Agents. </div>
                         <div class="author">Fengyu Liu, Yuan Zhang, Jiaqi Luo, Jiarun Dai, Tian Chen, Letian Yuan, Zhengmin Yu, Youkun Shi, Ke Li, Chengyuan Zhou, Hao Chen, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/agentfuzz-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">XSSky: Detecting XSS Vulnerabilities through Local Path-Persistent Fuzzing. </div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhao Bai, Feng Xue, Jiarun Dai, Fengyu Liu, Lei Zhang, Xiapu Luo, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/xssky-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Pig in a Poke: Automatically Detecting and Exploiting Link Following Vulnerabilities in Windows File Operations. </div>
                         <div class="author">Bocheng Xiang, Yuan Zhang, Fengyu Liu, Hao Huang, Zihan Lin, Min Yang. </div>
                         <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025
-                            (to appear).
+                            <a href="./paper/linkzard-security25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
@@ -576,7 +576,7 @@
                         <div class="title">Locating Security Patch Variants with Two-Dimensional Code Commit Features.</div>
                         <div class="author">Lin Wang, Yuan Zhang, Xiaoting Chen, Min Yang.</div>
                         <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2025.
-                           (to appear).
+                            <a href="https://ieeexplore.ieee.org/document/11027153/">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2024">
@@ -971,6 +971,7 @@
             <div>Technical Program Committee:<br>
                 <ul>
                     <li>the 35th USENIX Security Symposium (USENIX Security 2026)</i>
+                    <li>the 21st ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2026)</i>
                     <li>the 21st International Conference on Information Security and Cryptology (Inscrypt 2025)</i>
                     <li>the 30th European Symposium on Research in Computer Security (ESORICS 2025)</i>
                     <li>the 15th ACM Conference on Data and Application Security and Privacy (CODASPY 2025)</i>
