--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Aug, 2025] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Congrats Qiyi! <br/>  </li>
                     <li>[July, 2025] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2026/">NDSS 2026</a>. Congrats Runhao! <br/>  
                     <li>[June, 2025] Three papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Youkun, Bocheng & Fengyu! <br/>  </li>
                     <li>[May, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Lin! <br/>  </li>
@@ -355,8 +356,8 @@
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
                     <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
-                    <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
-                    <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>  
+                    <!-- <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
+                    <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>   -->
                     <!-- <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity25/call-for-papers">USENIX Security 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>   -->
@@ -464,6 +465,13 @@
                         <div class="title">FirmCross: Detecting Taint-style Vulnerabilities in Modern C-Lua Hybrid Web Services of Linux-based Firmware. </div>
                         <div class="author">Runhao Liu, Jiarun Dai, Haoyu Xiao, Yuan Zhang, Yeqi Mou, Lukai Xu, Bo Yu, Baosheng Wang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 33rd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, 23-27 Feb, 2026
+                            (to appear).
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Be Aware of What You Let Pass: Demystifying URL-based Authentication Bypass Vulnerability in Java Web Applications. </div>
+                        <div class="author">Qiyi Zhang, Fengyu Liu, Zihan Lin, Yuan Zhang. </div>
+                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, China, October 13-17, 2025
                             (to appear).
                         </div>
                     </li>
