--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Aug, 2025] Our work on detecting and exploiting link following vulnerabilities received <span class="award">Honorable Mention Award</span> at <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>! <br/> 
                     <li>[Aug, 2025] Three papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhuoxiang, Peng & Bofei! <br/>  </li>
                     <li>[Aug, 2025] One paper accepted by <a href="https://superappsec.github.io/">SaTS 2025</a>. Congrats Pei! <br/>  </li>
                     <li>[Aug, 2025] One paper accepted by <a href="https://2025.splashcon.org/track/OOPSLA">OOPSLA 2025</a>. Congrats Jiarun! <br/>  </li>
@@ -501,7 +502,7 @@
                     </li>
                     <li class="pub 2025">
                         <div class="title">Fast Play, Fast Profit: Unveiling the Prevalence of Aggressive Ad Behaviors in Mini-Game. </div>
-                        <div class="author">Pei Chen, Geng Hong, Yicheng Qin, Huazhe Wang, Mengying Wu, Yuan Zhang, Min Yang, Ziru Zhao, Yuanpeng Zhu. </div>
+                        <div class="author">Pei Chen, Geng Hong, Yicheng Qin, Huazhe Wang, Mengying Wu, Yuan Zhang, Min Yang, Ziru Zhao, Yuanpeng Zhu, Tao Su. </div>
                         <div class="venue">In Proceedings of the 3rd ACM Workshop on Secure and Trustworthy Superapps (SaTS), co-located with ACM CCS, Taipei, Taiwan, China, October 13, 2025.
                             (to appear)
                         </div>
@@ -537,7 +538,7 @@
                     <li class="pub 2025">
                         <div class="title">Pig in a Poke: Automatically Detecting and Exploiting Link Following Vulnerabilities in Windows File Operations. </div>
                         <div class="author">Bocheng Xiang, Yuan Zhang, Fengyu Liu, Hao Huang, Zihan Lin, Min Yang. </div>
-                        <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025.
+                        <div class="venue">In Proceedings of the 34th USENIX Security Symposium (USENIX Security), Seattle, WA, USA, August 13-15, 2025. <b class="award">[Honorable Mention Award]</b>
                             <a href="./paper/linkzard-security25.pdf">[Paper]</a>
                         </div>
                     </li>
