--- a/index.html
+++ b/index.html
@@ -342,6 +342,9 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Sept, 2025] Two papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhangyue & Haoran! <br/>  </li>
+                    <li>[Sept, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Youkun! <br/>  </li>
+                    <li>[Sept, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=32">IEEE TSE</a>. Congrats Youkun! <br/>  </li>
                     <li>[Aug, 2025] Our work on detecting and exploiting link following vulnerabilities received <span class="award">Honorable Mention Award</span> at <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>! <br/> 
                     <li>[Aug, 2025] Three papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhuoxiang, Peng & Bofei! <br/>  </li>
                     <li>[Aug, 2025] One paper accepted by <a href="https://superappsec.github.io/">SaTS 2025</a>. Congrats Pei! <br/>  </li>
@@ -359,7 +362,7 @@
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.codaspy.org/2025/cfp.html">ACM CODASPY 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
-                    <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
+                    <!-- <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>   -->
                     <!-- <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>   -->
                     <!-- <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
@@ -489,6 +492,20 @@
                     <li class="pub 2025">
                         <div class="title">LLMPort: Cross-file Patch Porting via Task Decomposition and Self-correction. </div>
                         <div class="author">Bofei Chen, Lei Zhang, Peng Deng, Nan Wang, Haoyu Xu, Mingda Guo, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
+                            (to appear)
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">DeepExploitor: LLM-Enhanced Automated Exploitation of DeepLink Attack in Hybrid Apps. </div>
+                        <div class="author">Zhangyue Zhang, Lei Zhang, Zhibo Zhang, Yongheng Liu, Zhemin Yang, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
+                            (to appear)
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Exploring Static Taint Analysis in LLMs: A Dynamic Benchmarking Framework for Measurement and Enhancement. </div>
+                        <div class="author">Haoran Zhao, Lei Zhang, Keke Lian, Fute Sun, Bofei Chen, Yongheng Liu, Zhiyu Wu, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
                             (to appear)
                         </div>
@@ -624,6 +641,20 @@
                         <div class="author">Lin Wang, Yuan Zhang, Xiaoting Chen, Min Yang.</div>
                         <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2025.
                             <a href="https://ieeexplore.ieee.org/document/11027153/">[Paper]</a>
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">Facilitating Access Control Vulnerability Detection in Modern Java Web Applications with Accurate Permission Check Identification.</div>
+                        <div class="author">Youkun Shi, Fengyu Liu, Guangliang Yang, Yuan Zhang, Yinzhi Cao, Enhao Li, Xin Tan, Xiapu Luo, Min Yang, Siyi Chen.</div>
+                        <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2025.
+                            
+                        </div>
+                    </li>
+                    <li class="pub 2025">
+                        <div class="title">PHPJoy: A Novel Extended Graph-based PHP Code Analysis Framework.</div>
+                        <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Guangliang Yang, Shengke Ye, Chengyu Yang, Fengyu Liu, Xiapu Luo, Min Yang.</div>
+                        <div class="venue">In IEEE Transactions on Software Engineering (TSE), 2025.
+
                         </div>
                     </li>
                     <li class="pub 2024">
@@ -1009,6 +1040,7 @@
             </div>
             <div>Editorial Board:<br>
                 <ul>
+                    <li><a href="https://mc.manuscriptcentral.com/tifs-ieee">IEEE Transactions on Information Forensics and Security</a> (TIFS), 2025-now</li>
                     <li><a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy</a> (TOPS), 2024-now</li>
                     <li><a href="https://cybersecurity.springeropen.com/">Cybersecurity</a>, 2024-now</li>
                     <li><a href="https://www.editorialmanager.com/emse/Default.aspx">Empirical Software Engineering</a> (EMSE), 2021-now</li>
@@ -1018,6 +1050,7 @@
             <div>Technical Program Committee:<br>
                 <ul>
                     <li>the 35th USENIX Security Symposium (USENIX Security 2026)</i>
+                    <li>the 35th International World Wide Web Conference (WWW 2026)</i>
                     <li>the 21st ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2026)</i>
                     <li>the 21st International Conference on Information Security and Cryptology (Inscrypt 2025)</i>
                     <li>the 30th European Symposium on Research in Computer Security (ESORICS 2025)</i>
