--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Oct, 2025] Our work on black-box access control vulnerability detection received <span class="award">Distinguished Paper Award</span> at <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>! <br/> 
                     <li>[Sept, 2025] Two papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhangyue & Haoran! <br/>  </li>
                     <li>[Sept, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Youkun! <br/>  </li>
                     <li>[Sept, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=32">IEEE TSE</a>. Congrats Youkun! <br/>  </li>
@@ -359,9 +360,9 @@
                     <li>[March, 2025] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Haoyu! <br/>  
                     <li>[Jan, 2025] Four papers accepted by <a href="https://www.usenix.org/conference/usenixsecurity25/">USENIX Security 2025</a>. Congrats Zihan, Xinyou, Keke & Peng! <br/>  </li>
                     <li>[Jan, 2025] One paper accepted by <a href="https://www2025.thewebconf.org/">WWW 2025</a>. Congrats Wuyuao Mai! <br/>  </li>
-                    <li>[Oct, 2024] I will join the TPC of <a href="https://www.codaspy.org/2025/cfp.html">ACM CODASPY 2025</a>. Welcome to submit!</li>
+                    <!-- <li>[Oct, 2024] I will join the TPC of <a href="https://www.codaspy.org/2025/cfp.html">ACM CODASPY 2025</a>. Welcome to submit!</li>
                     <li>[Oct, 2024] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>. Welcome to submit!</li>
-                    <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li>
+                    <li>[Oct, 2024] I will join the TPC of <a href="https://www2025.thewebconf.org/research-tracks">WWW 2025</a> (Security and privacy track). Welcome to submit!</li> -->
                     <!-- <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>   -->
                     <!-- <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>   -->
@@ -514,28 +515,29 @@
                         <div class="title">ApkDiffer: Accurate and Scalable Cross-Version Diffing Analysis for Android Applications. </div>
                         <div class="author">Jiarun Dai, Mingyuan Luo, Yuan Zhang, Min Yang, Minghui Yang. </div>
                         <div class="venue">In Proceedings of the International Conference on Object-Oriented Programming Systems, Languages, and Application (OOPSLA/SPLASH), Singapore, October 12-18, 2025.
-                            (to appear)
+                            <a href="./paper/apkdiffer-oopsla25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Fast Play, Fast Profit: Unveiling the Prevalence of Aggressive Ad Behaviors in Mini-Game. </div>
                         <div class="author">Pei Chen, Geng Hong, Yicheng Qin, Huazhe Wang, Mengying Wu, Yuan Zhang, Min Yang, Ziru Zhao, Yuanpeng Zhu, Tao Su. </div>
                         <div class="venue">In Proceedings of the 3rd ACM Workshop on Secure and Trustworthy Superapps (SaTS), co-located with ACM CCS, Taipei, Taiwan, China, October 13, 2025.
-                            (to appear)
+                            <a href="./paper/minigame-sats25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Be Aware of What You Let Pass: Demystifying URL-based Authentication Bypass Vulnerability in Java Web Applications. </div>
                         <div class="author">Qiyi Zhang, Fengyu Liu, Zihan Lin, Yuan Zhang. </div>
                         <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, China, October 13-17, 2025.
-                            (to appear)
+                            <a href="./paper/uabscan-ccs25.pdf">[Paper]</a>
+                            <a href="./paper/uabscan-ccs25-long.pdf">[Full Version]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">BACScan: Automatic Black-Box Detection of Broken-Access-Control Vulnerabilities in Web Applications. </div>
                         <div class="author">Fengyu Liu, Yuan Zhang, Enhao Li, Wei Meng, Youkun Shi, Qianheng Wang, Chenlin Wang, Zihan Lin, Min Yang. </div>
-                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, China, October 13-17, 2025.
-                            (to appear)
+                        <div class="venue">In Proceedings of the 32nd ACM Conference on Computer and Communications Security (CCS), Taipei, Taiwan, China, October 13-17, 2025.<b class="award">[Distinguished Paper Award]</b>
+                            <a href="./paper/bacscan-ccs25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
@@ -647,14 +649,14 @@
                         <div class="title">Facilitating Access Control Vulnerability Detection in Modern Java Web Applications with Accurate Permission Check Identification.</div>
                         <div class="author">Youkun Shi, Fengyu Liu, Guangliang Yang, Yuan Zhang, Yinzhi Cao, Enhao Li, Xin Tan, Xiapu Luo, Min Yang, Siyi Chen.</div>
                         <div class="venue">In IEEE Transactions on Information Forensics and Security (TIFS), 2025.
-                            
+                            <a href="https://ieeexplore.ieee.org/document/11180138">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">PHPJoy: A Novel Extended Graph-based PHP Code Analysis Framework.</div>
                         <div class="author">Youkun Shi, Yuan Zhang, Tianhan Luo, Guangliang Yang, Shengke Ye, Chengyu Yang, Fengyu Liu, Xiapu Luo, Min Yang.</div>
                         <div class="venue">In IEEE Transactions on Software Engineering (TSE), 2025.
-
+                            <a href="https://www.computer.org/csdl/journal/ts/5555/01/11181216/2akruZt6X0k">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2024">
