--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2025] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2026/">NDSS 2026</a>. Congrats Bocheng! <br/>  
                     <li>[Oct, 2025] Our work on black-box access control vulnerability detection received <span class="award">Distinguished Paper Award</span> at <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>! <br/> 
                     <li>[Sept, 2025] Two papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhangyue & Haoran! <br/>  </li>
                     <li>[Sept, 2025] One paper accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE TIFS</a>. Congrats Youkun! <br/>  </li>
@@ -470,6 +471,13 @@
             <div id="pub">
                 <ol>
                     <li class="pub 2026">
+                        <div class="title">LinkGuard: A Lightweight State-Aware Runtime Guard Against Link Following Attacks in Windows File System. </div>
+                        <div class="author">Bocheng Xiang, Yuan Zhang, Hao Huang, Fengyu Liu, Youkun Shi. </div>
+                        <div class="venue">In Proceedings of the 33rd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-27, 2026.
+                            (to appear)
+                        </div>
+                    </li>
+                    <li class="pub 2026">
                         <div class="title">FirmCross: Detecting Taint-style Vulnerabilities in Modern C-Lua Hybrid Web Services of Linux-based Firmware. </div>
                         <div class="author">Runhao Liu, Jiarun Dai, Haoyu Xiao, Yuan Zhang, Yeqi Mou, Lukai Xu, Bo Yu, Baosheng Wang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 33rd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-27, 2026.
@@ -480,35 +488,35 @@
                         <div class="title">Security Debt in LLM Agent Applications: A Measurement Study of Vulnerabilities and Mitigation Trade-offs. </div>
                         <div class="author">Zhuoxiang Shen, Jiarun Dai, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
-                            (to appear)
+                            <a href="./paper/agentstudy-ase25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Algernon: A Flag-Guided Hybrid Fuzzer for Unlocking Hidden Program Paths. </div>
                         <div class="author">Peng Deng, Lei Zhang, Jingqi Long, Wenzheng Hong, Zhemin Yang, Yuan Zhang, Donglai Zhu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
-                            (to appear)
+                            <a href="./paper/Algernon-ase25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">LLMPort: Cross-file Patch Porting via Task Decomposition and Self-correction. </div>
                         <div class="author">Bofei Chen, Lei Zhang, Peng Deng, Nan Wang, Haoyu Xu, Mingda Guo, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
-                            (to appear)
+                            <a href="./paper/LLMPort-ase25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">DeepExploitor: LLM-Enhanced Automated Exploitation of DeepLink Attack in Hybrid Apps. </div>
                         <div class="author">Zhangyue Zhang, Lei Zhang, Zhibo Zhang, Yongheng Liu, Zhemin Yang, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
-                            (to appear)
+                            <a href="./paper/DeepExploitor-ase25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
                         <div class="title">Exploring Static Taint Analysis in LLMs: A Dynamic Benchmarking Framework for Measurement and Enhancement. </div>
                         <div class="author">Haoran Zhao, Lei Zhang, Keke Lian, Fute Sun, Bofei Chen, Yongheng Liu, Zhiyu Wu, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 40th IEEE/ACM International Conference on Automated Software Engineering (ASE), Seoul, South Korea, November 16-20, 2025.
-                            (to appear)
+                            <a href="./paper/LLMTaint-ase25.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li class="pub 2025">
@@ -1053,6 +1061,7 @@
                 <ul>
                     <li>the 35th USENIX Security Symposium (USENIX Security 2026)</i>
                     <li>the 35th International World Wide Web Conference (WWW 2026)</i>
+                    <li>the 16th ACM Conference on Data and Application Security and Privacy (CODASPY 2026)</i>
                     <li>the 21st ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2026)</i>
                     <li>the 21st International Conference on Information Security and Cryptology (Inscrypt 2025)</i>
                     <li>the 30th European Symposium on Research in Computer Security (ESORICS 2025)</i>
