--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                 }
             }
         }
-        // window.onload= function(){
-        //     showPub('2025');
-        // }
+         window.onload= function(){
+             showPub('2026');
+         }
     </script>
 <!-- <script type="text/javascript" id="clustrmaps" src="http://cdn.clustrmaps.com/map_v2.js?d=lplNOM8Srknxk2Rdb7zm-qrXmm8SrZkvyeNgEfmfZAU&cl=ffffff&w=a"></script>     -->
 <!-- <div class="banner">
@@ -460,13 +460,14 @@
 
             <hr size=2>
             <h3><a name="publications">Publications </a>
-                <!-- <a class="year" href="javascript:showPub('2025');">( 25 /</a>
+                <a class="year" href="javascript:showPub('2026');">( 26 /</a>
+                <a class="year" href="javascript:showPub('2025');">25 /</a>
                 <a class="year" href="javascript:showPub('2024');">24 /</a>
                 <a class="year" href="javascript:showPub('2023');">23 /</a>
                 <a class="year" href="javascript:showPub('2022');">22 /</a>
                 <a class="year" href="javascript:showPub('2021');">21 /</a>
                 <a class="year" href="javascript:showPub('2020');">20 /</a>
-                <a class="year" href="javascript:showPub('');">all )</a> -->
+                <a class="year" href="javascript:showPub('');">all )</a>
             </h3>
             <div id="pub">
                 <ol>
@@ -1016,10 +1017,10 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2024, Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019, Spring 2018</i></li></ul>
+                        <ul><li><i>Spring 2025, Spring 2024, Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019, Spring 2018</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
-                        <ul><li><i>Fall 2024, Fall 2023, Fall 2022, Fall 2021, Fall 2020, Fall 2019, Fall 2018, Fall 2017, Fall 2016, </i></li></ul>
+                        <ul><li><i>Fall 2025, Fall 2024, Fall 2023, Fall 2022, Fall 2021, Fall 2020, Fall 2019, Fall 2018, Fall 2017, Fall 2016, </i></li></ul>
                     </li>
                     <li> Compiler Principles <i>(in School of Software)</i>
                         <ul><li><i>Fall 2017</i></li></ul>
