--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2025] One paper accepted by <a href="https://dl.acm.org/journal/tosem">ACM TOSEM</a>. Congrats Zongan! <br/>  </li>
                     <li>[Dec, 2025] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2026/">NDSS 2026</a>. Congrats Bocheng! <br/>  
                     <li>[Oct, 2025] Our work on black-box access control vulnerability detection received <span class="award">Distinguished Paper Award</span> at <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>! <br/> 
                     <li>[Sept, 2025] Two papers accepted by <a href="https://conf.researchr.org/home/ase-2025">ASE 2025</a>. Congrats Zhangyue & Haoran! <br/>  </li>
@@ -482,6 +483,13 @@
                         <div class="title">FirmCross: Detecting Taint-style Vulnerabilities in Modern C-Lua Hybrid Web Services of Linux-based Firmware. </div>
                         <div class="author">Runhao Liu, Jiarun Dai, Haoyu Xiao, Yuan Zhang, Yeqi Mou, Lukai Xu, Bo Yu, Baosheng Wang, Min Yang. </div>
                         <div class="venue">In Proceedings of the 33rd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-27, 2026.
+                            (to appear)
+                        </div>
+                    </li>
+                    <li class="pub 2026">
+                        <div class="title">ADSDx: Towards Automated Accident Diagnosis for High-level Autonomous Driving Systems. </div>
+                        <div class="author">Zongan Huang, Jiarun Dai, Mingyuan Luo, Yuqi Chen, Huijia Sun, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In ACM Transactions on Software Engineering and Methodology (TOSEM), 2026.
                             (to appear)
                         </div>
                     </li>
