--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2025] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity26">USENIX Security 2026</a>. Congrats Kangzheng! <br/>  </li>
                     <li>[Dec, 2025] One paper accepted by <a href="https://dl.acm.org/journal/tosem">ACM TOSEM</a>. Congrats Zongan! <br/>  </li>
                     <li>[Dec, 2025] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2026/">NDSS 2026</a>. Congrats Bocheng! <br/>  
                     <li>[Oct, 2025] Our work on black-box access control vulnerability detection received <span class="award">Distinguished Paper Award</span> at <a href="https://www.sigsac.org/ccs/CCS2025/">ACM CCS 2025</a>! <br/> 
@@ -472,6 +473,13 @@
             </h3>
             <div id="pub">
                 <ol>
+                    <li class="pub 2026">
+                        <div class="title">KernelRCA: Facilitating Root Cause Analysis of Memory Corruptions in Linux Kernel with Contextual Causality Chain.</div>
+                        <div class="author">Kangzheng Gu, Yifan Zhang, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 35th USENIX Security Symposium (USENIX Security), Baltimore, MD, USA, August 12-14, 2026.
+                            (to appear)
+                        </div>
+                    </li>
                     <li class="pub 2026">
                         <div class="title">LinkGuard: A Lightweight State-Aware Runtime Guard Against Link Following Attacks in Windows File System. </div>
                         <div class="author">Bocheng Xiang, Yuan Zhang, Hao Huang, Fengyu Liu, Youkun Shi. </div>
